# yolo-openai-detector

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
docs/: API_CONTRACT.md  ARCHITECTURE.md  ROADMAP.md  SECURITY.md  VALIDATION.md  WORK_ORDERS.md
docs/ADR/: 0001-product-scope.md  0002-openai-compatible-chat-completions.md  0003-cpu-only-onnx-runtime.md  0004-fixed-bearer-api-key.md  0005-no-background-jobs.md
scripts/: benchmark_single_image.py  run_dev.sh
src/cpu_yolo_api/: __init__.py  config.py  detector.py  image_input.py  main.py  openai_compat.py  schemas.py  security.py
tests/: conftest.py  test_api_contract.py  test_image_input.py
